--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World
+
+<html>
+<body>
+<h2>SunPort Schema test</h2>
+	<p><a href="sunport://sunport.co/app?token=0LU_QVoyG00ChhXdvZlGMYwS" class="btn btn-default">Open app with token</a></p>
+</body>
+</html>
