--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h2>SunPort Schema test</h2>
 	<p><a href="sunport://sunport.co/app?token=0LU_QVoyG00ChhXdvZlGMYwS" class="btn btn-default">Open app with token</a></p>
+	<p><a href="sunport://token=0LU_QVoyG00ChhXdvZlGMYwS" class="btn btn-default">Open app with simple url token</a></p>
 </body>
 </html>
