--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 <body>
 <h2>SunPort Schema test</h2>
 	<p><a href="sunport://sunport.co/app?token=0LU_QVoyG00ChhXdvZlGMYwS" class="btn btn-default">Open app with token</a></p>
+	<p><a href="sunport://sunport.co/app?token=0LTw4TyNLL66PbMPfLYDyDsG" class="btn btn-default">Token for testtestqa111@gmail.com</a></p>
+	<p><a href="sunport://sunport.co/app?token=0LVU6XxZG00Copbl1jrMSf8e" class="btn btn-default">Token for ttestqa111@gmail.com</a></p>
 </body>
 </html>
