--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 	<p><a href="sunport://sunport.co/app?token=0LU_QVoyG00ChhXdvZlGMYwS" class="btn btn-default">Open app with token</a></p>
 	<p><a href="sunport://sunport.co/app?token=0LTw4TyNLL66PbMPfLYDyDsG" class="btn btn-default">Token for testtestqa111@gmail.com</a></p>
 	<p><a href="sunport://sunport.co/app?token=0LVU6XxZG00Copbl1jrMSf8e" class="btn btn-default">Token for ttestqa111@gmail.com</a></p>
+	<p><a href="sunport://sunport.co/app?token=0LWR6GkVLL66s0Rsybq9Na8l" class="btn btn-default">Token for David</a></p>
 </body>
 </html>
