--- a/index.html
+++ b/index.html
@@ -6,5 +6,17 @@
 	<p><a href="sunport://sunport.co/app?token=0LTw4TyNLL66PbMPfLYDyDsG" class="btn btn-default">Token for testtestqa111@gmail.com</a></p>
 	<p><a href="sunport://sunport.co/app?token=0LVU6XxZG00Copbl1jrMSf8e" class="btn btn-default">Token for ttestqa111@gmail.com</a></p>
 	<p><a href="sunport://sunport.co/app?token=0LWR6GkVLL66s0Rsybq9Na8l" class="btn btn-default">Token for David</a></p>
+<h2>Hero</h2>
+	<p><a href="mckhero2://channel/f6adc021-2487-e611-80b7-000c297d31d1" class="btn btn-default">Open channel</a></p>
+	<p><a href="mckhero2://channel/6e3155b5-fe99-e611-80b8-000c297d31d1" class="btn btn-default">Open channel 2</a></p>
+	<p><a href="mckhero2://event/12ed5516-7895-e611-80b8-000c297d31d1" class="btn btn-default">Open event</a></p>
+	<p><a href="mckhero2://event/12ed5516-7895-e611-80b8-000c297d31d1/messages" class="btn btn-default">Open event messages</a></p>
+	<p><a href="mckhero2://event/12ed5516-7895-e611-80b8-000c297d31d1/posts" class="btn btn-default">Open event posts</a></p>
+	<p><a href="mckhero2://poi/555033b1-e593-e611-80b8-000c297d31d1" class="btn btn-default">Open poi</a></p>
+	<p><a href="mckhero2://poi/555033b1-e593-e611-80b8-000c297d31d1/reviews" class="btn btn-default">Open poi reviews</a></p>
+	<p><a href="mckhero2://poi/555033b1-e593-e611-80b8-000c297d31d1/posts" class="btn btn-default">Open poi posts</a></p>
+	<p><a href="mckhero2://listitem/96a7b779-9897-e611-80b8-000c297d31d1" class="btn btn-default">Open listitem details</a></p>
+	<p><a href="mckhero2://study/904f8eaf-5a7a-4fdf-9c85-e0d158c1c39d" class="btn btn-default">Open study detail</a></p>
+	<p><a href="mckhero2://study" class="btn btn-default">Open study</a></p>
 </body>
 </html>
