Updated channel id

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<p><a href="sunport://sunport.co/app?token=0LVU6XxZG00Copbl1jrMSf8e" class="btn btn-default">Token for ttestqa111@gmail.com</a></p>
 	<p><a href="sunport://sunport.co/app?token=0LWR6GkVLL66s0Rsybq9Na8l" class="btn btn-default">Token for David</a></p>
 <h2>Hero</h2>
-	<p><a href="mckhero2://channel/f6adc021-2487-e611-80b7-000c297d31d1" class="btn btn-default">Open channel</a></p>
+	<p><a href="mckhero2://channel/6afe3b74-100b-e711-80bc-000c297d31d1" class="btn btn-default">Open channel DT2 with DT</a></p>
 	<p><a href="mckhero2://channel/6e3155b5-fe99-e611-80b8-000c297d31d1" class="btn btn-default">Open channel 2</a></p>
 	<p><a href="mckhero2://event/12ed5516-7895-e611-80b8-000c297d31d1" class="btn btn-default">Open event</a></p>
 	<p><a href="mckhero2://event/12ed5516-7895-e611-80b8-000c297d31d1/messages" class="btn btn-default">Open event messages</a></p>
